--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3.1"
 
 services:
   postgres:
-    image: postgres
+    image: docker.io/postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
   redis:
-    image: redis
+    image: docker.io/redis
     restart: always
     ports:
       - "6379:6379"
